[gd_scene load_steps=7 format=3 uid="uid://bpuwmmlu0n5vu"]

[ext_resource type="Script" path="res://Scripts/Scene/mainmenu.gd" id="1_6q4mq"]
[ext_resource type="Texture2D" uid="uid://cwhuyn3qu4i1u" path="res://Assets/Main Menu/downthehatch_mainmenu_pixelated.png" id="2_2cl0x"]
[ext_resource type="Shader" path="res://Assets/Shaders/pause_menu.gdshader" id="2_mf0j4"]
[ext_resource type="Theme" uid="uid://dw7x1c47wnwhn" path="res://Scenes/UI/buttontheme.tres" id="4_cqxyd"]
[ext_resource type="AudioStream" uid="uid://b2kop3cm1f11c" path="res://Audio/OST/Down the Hatch (Main Theme).mp3" id="4_wxg2m"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_edao2"]
shader = ExtResource("2_mf0j4")
shader_parameter/amount = 1.725

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6q4mq")

[node name="DownthehatchMainmenuPixelated" type="Sprite2D" parent="."]
z_index = -31
z_as_relative = false
position = Vector2(640.003, 360)
scale = Vector2(3.75365, 3.75)
texture = ExtResource("2_2cl0x")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_edao2")
layout_mode = 2
offset_left = 120.0
offset_top = 439.0
offset_right = 525.0
offset_bottom = 583.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 443.0
offset_right = 520.0
offset_bottom = 601.0
theme = ExtResource("4_cqxyd")
theme_override_constants/separation = 16
alignment = 1

[node name="Play" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="VBoxContainer"]
texture_filter = 2
layout_mode = 2
text = "Credits"

[node name="DownTheHatch(mainTheme)" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_wxg2m")
autoplay = true
mix_target = 1
bus = &"BGM"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Credits" to="." method="_on_credits_pressed"]
